# rust-example

./: .gitignore  Cargo.toml  README.md  office-buddy-api.yaml
hello-world/: Cargo.toml
hello-world/src/: hot_key.rs  lib.rs  main.rs
hello-world/src/file/: file_system.rs
hello-world/src/web/: hello_world.rs
hello-world/tests/: array_test.rs  futures_test.rs  macro_test.rs  print_test.rs
http/: .env  .env.local  .env.office  Cargo.toml  README.md
http/migrations/2023-04-10-083122_create/: down.sql  up.sql
http/src/: lib.rs  main.rs  models.rs  schema.rs
http/src/controller/: mod.rs  system_config_controller.rs
http/src/repository/: mod.rs  system_config_repository.rs
macro-example/: Cargo.toml
macro-example/src/: lib.rs
macro-example/tests/: custom_attribute_macro.rs
office-buddy/: .env  Cargo.toml
office-buddy-cli/: Cargo.toml
office-buddy-cli/src/: app.rs  lib.rs  main.rs
office-buddy-cli/src/widgets/: mod.rs  time_record.rs
office-buddy/migrations/2023-04-10-083122_create/: up.sql
office-buddy/src/: lib.rs  main.rs  models.rs  router.rs  schema.rs
office-buddy/src/function/: mod.rs  system_config.rs  time_record.rs
office-buddy/src/repository/: mod.rs  system_config_repository.rs
office_buddy_mobile/: README.md  pubspec.yaml
office_buddy_mobile/android/app/: build.gradle
office_buddy_mobile/android/app/src/debug/: AndroidManifest.xml
office_buddy_mobile/android/app/src/main/: AndroidManifest.xml
office_buddy_mobile/ios/Runner/: Info.plist
office_buddy_mobile/ios/Runner.xcodeproj/: project.pbxproj
office_buddy_mobile/ios/Runner/Base.lproj/: Main.storyboard
office_buddy_mobile/lib/: main.dart
office_buddy_mobile/lib/home/: feature_list.dart
office_buddy_mobile/lib/pages/feature/: feature_controller.dart  feature_view.dart
office_buddy_mobile/lib/pages/gpt/: gpt_view.dart
office_buddy_mobile/lib/pages/home/: home_binding.dart  home_controller.dart  home_view.dart
office_buddy_mobile/lib/routes/: routes.dart
office_buddy_mobile/lib/util/: HttpClient.dart  base_widget.dart  select.dart
office_buddy_mobile/linux/: CMakeLists.txt  my_application.cc
office_buddy_mobile/macos/Runner.xcodeproj/: project.pbxproj
office_buddy_mobile/macos/Runner/Configs/: AppInfo.xcconfig
office_buddy_mobile/script/: build-apk.sh  build-ios.sh  build-web.sh
office_buddy_mobile/test/: widget_test.dart
office_buddy_mobile/web/: index.html  manifest.json
office_buddy_mobile/windows/: CMakeLists.txt
office_buddy_mobile/windows/runner/: Runner.rc  main.cpp
terminal-example/: Cargo.toml  build.sh
terminal-example/src/: main.rs  test.rs
terminal-example/src/dashboard/: mod.rs
terminal-tool/: Cargo.toml
terminal-tool/src/: lib.rs  main.rs
terminal-tool/src/dashboard/: demo.rs  demo1.rs
terminal-tool/src/operation/: clip.rs  command.rs  kube.rs  mod.rs
(+20 files in other folders)
