
[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures={ version="0.3.*", features = ["thread-pool"] }
yew = { version = "0.20.0", features = ["csr"] }
global-hotkey="0.1.2"
winit="0.28.3"