[package]
name = "office_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["rkyv"] }
tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.0.3", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
anyhow = "1"
serde_json = "1"