[package]
name = "office_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http server
axum = "0.6.12"
# 日期时间处理工具
chrono = { version = "0.4.24", features = ["rkyv", "serde"] }
# 携程运行时
tokio = { version = "1", features = ["full"] }
# 序列化工具
serde = { version = "1", features = ["derive"] }
# 数据库访问工具
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
# 环境变量工具
dotenvy = "0.15"
# 异常处理工具
anyhow = "1"
# json 序列化工具
serde_json = "1"