[package]
name = "terminal-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
tui = "0.19"
crossterm = { version = "0.26.1" }
futures={ version="0.3.*", features = ["thread-pool"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "wangyx"
path = "src/bin/wangyx.rs"
