[package]
name = "terminal-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
lazy_static = "1.4.0"
uuid = { version = "1.3.1", features = ["v4"] }
clipboard-win = "4.5.0"
#tui = "0.19"
#crossterm = { version = "0.26.1" }
#futures={ version="0.3.*", features = ["thread-pool"] }
#tokio = { version = "1", features = ["full"] }

[[bin]]
name = "wangyx"
path = "src/bin/wangyx.rs"
